Add MDX support

--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -18,4 +18,5 @@ tags: [Unity, GameJam, Windows]
     * Designer gave the script in a design document and I implemented it. 
     * Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future.
 [Link](https://github.com/GnoxNahte/DialogueSystem)
-<!-- TODO Add the correct link to the portfolio website -->
+
+{/* TODO Add the correct link to the portfolio website */}
