improve ui for project cards

--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -10,12 +10,12 @@ tags: [Unity, GameJam, Windows]
 ---
 
 ### Features that I did:
-* Character Movement script:
+* Highly Customisable Character Movement script:
     * I did the behaviours and the designer and artist changed the parameters like the speed / jump height
     * Editor:
     ![Character Movement Editor](../SentientBuffet/SentientBuffet_MovementEditor.png)
 * Dialogue System:
-    * Designer gave the script in a design document and I implemented it. 
+    * Designer gave the character dialogue script in a design document and I implemented it. 
     * Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future.
 [Link](https://github.com/GnoxNahte/DialogueSystem)
 
