Add a status for the tags

--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -5,7 +5,7 @@ releaseDate: 2022-08-28 # format is YYYY-MM-DD
 projectLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
 githubLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
 thumbnailPath: "../SentientBuffet/SentientBuffetThumbnail.png"
-tags: [Unity, GameJam, Windows]
+tags: [Unity, GameJam, Windows, Dropped]
 
 ---
 
