--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -4,7 +4,7 @@ shortDescription: "A simple survival game where you have to defend yourself agai
 releaseDate: 2022-07-17
 link: "https://team-auboreal.itch.io/sentient-buffet"
 thumbnailPath: "../SpellboundRollers.png"
-tags: [Unity, GameJam]
+tags: [Unity, GameJam, Completed ]
 
 ifShow: true
 ---
