--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -10,13 +10,13 @@ tags: [Unity, GameJam, Windows, Completed]
 ---
 
 ### Features that I did:
-* Highly Customisable Character Movement script:
-    * I did the behaviours and the designer and artist changed the parameters like the speed / jump height
-    * Editor:
+- Highly Customisable Character Movement script:
+    - I did the behaviours and the designer and artist changed the parameters like the speed / jump height
+    - The greyed out elements calculated based on the other variables.
+    - Editor:
     ![Character Movement Editor](../SentientBuffet/SentientBuffet_MovementEditor.png)
-* Dialogue System:
-    * Designer gave the character dialogue script in a design document and I implemented it. 
-    * Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future.
-[Link](https://github.com/GnoxNahte/DialogueSystem)
+- [Dialogue System](https://github.com/GnoxNahte/DialogueSystem):
+    - Designer gave the character dialogue script in a design document and I implemented it. 
+    - Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future.
 
 {/* TODO Add the correct link to the portfolio website */}
