--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -2,13 +2,11 @@
 title: Spellbound Rollers
 shortDescription: "A simple survival game where you have to defend yourself against living dice with your own through utilizing several special powers: Fire, poison, ice etc... Collect the chips, gain XP and unlock more powers!"
 releaseDate: 2022-07-17
-link: "https://team-auboreal.itch.io/sentient-buffet"
+projectLink: "https://team-auboreal.itch.io/sentient-buffet"
 thumbnailPath: "../SpellboundRollers/SpellboundRollers.png"
-tags: [Unity, GameJam, Completed ]
-
-ifShow: true
+tags: [Unity, GameJam, Completed]
 ---
 
 Features that I did:
-* Character Movement script (designer and artist changed the movement parameters)
-* Dialogue System (Designer gave the script in a design document and I implemented it. Sidenote: Trying to convert the editor UI to UI toolkit to learn UI Toolkit. [Link](https://github.com/GnoxNahte/DialogueSystem)
+- Character Movement script (designer and artist changed the movement parameters)
+- Dialogue System (Designer gave the script in a design document and I implemented it. Sidenote: Trying to convert the editor UI to UI toolkit to learn UI Toolkit. [Link](https://github.com/GnoxNahte/DialogueSystem)
