Change markdown h3 to h2 for better clarity

--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -10,7 +10,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 
 ---
 
-### Disclaimer
+## Disclaimer
 - This was a prototype so...
     - Many features are not done
     - Website is a bit slow
@@ -18,14 +18,14 @@ tags: [SvelteKit, Client, Website, Dropped]
     - and there might be some bugs.
 - Was built on my free time from NS so wasn't full time on the project
 
-### Project Background
+## Project Background
     - Was a request from my father on how to improve his company's event registration process
     - Previously, they used Excel sheets and EventBrite
     - **Problem:** Took a long time to check in users, creating a long line during events
     - Wasn't employed, given any money or signed any contract. Feedback was mostly from my father and not staff from the company.
     - Project was dropped in the end because the company's higher ups wasn't comfortable with a third party handling the database, needing lots of approval
 
-### Overview on how the users and staff will use the app
+## Overview on how the users and staff will use the app
 1. Staff creates new event
 2. Staff sends register event link to users
 3. Users register event through link
@@ -33,7 +33,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 5. Users attend event
 6. Staff quickly scans QR Code, authenticate and checks in users
 
-### Project Scope & Features done to solve it
+## Project Scope & Features done to solve it
 
 ---
 
@@ -96,7 +96,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 
 ---
 
-### Others
+## Others
 ---
 
 <details>
@@ -119,7 +119,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 </details>
 ---
 
-### Software Used
+## Software Used
 - Framework: [SvelteKit](https://kit.svelte.dev/)
 - Hosting: [Netlify](https://www.netlify.com/)
 - Database: [Firebase](https://firebase.google.com/)
