--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -9,7 +9,7 @@ tags: [Unity, GameJam, Windows, Completed]
 
 ---
 
-### Features that I did:
+## Features that I did:
 - Highly Customisable Character Movement script:
     - I did the behaviours and the designer and artist changed the parameters like the speed / jump height
     - The greyed out elements calculated based on the other variables.
