Add Icons for event registration

--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -5,7 +5,7 @@ startDate: 2023-02-11 # format is YYYY-MM-DD
 releaseDate: 2023-04-12 # format is YYYY-MM-DD
 projectLink: https://gnoxnahte-event-registration.netlify.app # default is null, put link if possible
 # githubLink:  # default is null, put link if possible
-thumbnailPath: "../SentientBuffet/SentientBuffetThumbnail.png"
+thumbnailPath: "../EventRegistration/EventRegistration_Icon.png"
 tags: [SvelteKit, Client, Website, Dropped]
 
 ---
@@ -134,3 +134,4 @@ tags: [SvelteKit, Client, Website, Dropped]
 - Packages (On Firebase Functions Server): 
     - Sending Emails: [SendGrid](https://sendgrid.com/), [Firebase Functions](https://firebase.google.com/docs/functions)
     - QR Code generation: [qrcode](https://www.npmjs.com/package/qrcode)
+- Icon: <a href="https://www.flaticon.com/free-icons/registration" title="registration icons">Registration icons created by Paul J. - Flaticon</a>
