--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -1,6 +1,6 @@
 ---
 title: Event Registration
-shortDescription: A event registration website, sends QR Code to registered users and allows event staff to easily scan the QR Code to register and identify users.
+shortDescription: An event registration website that sends QR Code to registered users and allows event staff to easily scan the QR Code to register and identify users.
 startDate: 2023-02-11 # format is YYYY-MM-DD
 releaseDate: 2023-04-12 # format is YYYY-MM-DD
 projectLink: https://gnoxnahte-event-registration.netlify.app # default is null, put link if possible
@@ -16,17 +16,17 @@ tags: [SvelteKit, Client, Website, Dropped]
     - Website is a bit slow
     - CSS is very basic
     - and there might be some bugs.
-- Was built on my free time from NS so wasn't full time on the project
+- Was built on my free time from NS so wasn't full-time on the project
 
 ## Project Background
     - Was a request from my father on how to improve his company's event registration process
     - Previously, they used Excel sheets and EventBrite
     - **Problem:** Took a long time to check in users, creating a long line during events
     - Wasn't employed, given any money or signed any contract. Feedback was mostly from my father and not staff from the company.
-    - Project was dropped in the end because the company's higher ups wasn't comfortable with a third party handling the database, needing lots of approval
+    - Project was dropped in the end because the company's higher-ups wasn't comfortable with a third party handling the database, needing lots of approval
 
 ## Overview on how the users and staff will use the app
-1. Staff creates new event
+1. Staff creates a new event
 2. Staff sends register event link to users
 3. Users register event through link
 4. Users receive email with QR Code
@@ -53,15 +53,15 @@ tags: [SvelteKit, Client, Website, Dropped]
 ---
 
 <details>
-<summary>Sending users a regsiter form</summary>
+<summary>Sending users a register form</summary>
 - Easy to send the user a link to the form. [Sample event register link](https://gnoxnahte-event-registration.netlify.app/events/Sample%20Event%2001/register)
     - Note: It should send an email to your email address as long as the services are still working (I haven't been maintaining it as I've dropped the project)
-    - Has simple validation like checking if all fields has been filled up or the email was already used
+    - Has simple validation like checking if all fields have been filled up or the email was already used
 
 ![Register Form](../EventRegistration/EventRegistration_RegisterForm.png)
 <center>Register Form</center>
 
-- After submitting the form, the user should get a QR Code with the event infomation. (Planned to send a reminder email a few days before the event but didn't do it since project was dropped)
+- After submitting the form, the user should get a QR Code with the event information. (Planned to send a reminder email a few days before the event but didn't do it since project was dropped)
 
 ![Email With QR Code](../EventRegistration/EventRegistration_Email.png)
 <center>Email With QR Code</center>
@@ -70,7 +70,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 ---
 
 <details>
-<summary>Quick authentication and check in for users</summary>
+<summary>Quick authentication and check-in for users</summary>
 - Event staff can easily scan the QR Code.
 - Shows different background depending on the person. E.g. If VIP, show blue
 - Uses [Html5-QRCode](https://www.npmjs.com/package/html5-qrcode) to scan the QR Codes
@@ -124,7 +124,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 - Hosting: [Netlify](https://www.netlify.com/)
 - Database: [Firebase](https://firebase.google.com/)
 - Language: [Svelte](https://svelte.dev/), [TypeScript](https://www.typescriptlang.org/), HTML, CSS
-- Project Management: [Trelo](https://trello.com/home)
+- Project Management: [Trello](https://trello.com/home)
 - Packages (On Client):
     - Easier API interface with Firebase: [SvelteFire](https://github.com/codediodeio/sveltefire)
     - QR Code scanning: [Html5-QRCode](https://www.npmjs.com/package/html5-qrcode)
