Other small changes
Mainly remove contact page, change to gnoxnahte.com/about#contact

--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -124,6 +124,8 @@ tags: [SvelteKit, Client, Website, Dropped]
 - Hosting: [Netlify](https://www.netlify.com/)
 - Database: [Firebase](https://firebase.google.com/)
 - Language: [Svelte](https://svelte.dev/), [TypeScript](https://www.typescriptlang.org/), HTML, CSS
+- Version Control: [GitHub](https://github.com/)
+- IDE: [VS Code](https://code.visualstudio.com/)
 - Project Management: [Trello](https://trello.com/home)
 - Packages (On Client):
     - Easier API interface with Firebase: [SvelteFire](https://github.com/codediodeio/sveltefire)
@@ -134,4 +136,4 @@ tags: [SvelteKit, Client, Website, Dropped]
 - Packages (On Firebase Functions Server): 
     - Sending Emails: [SendGrid](https://sendgrid.com/), [Firebase Functions](https://firebase.google.com/docs/functions)
     - QR Code generation: [qrcode](https://www.npmjs.com/package/qrcode)
-- Icon: <a href="https://www.flaticon.com/free-icons/registration" title="registration icons">Registration icons created by Paul J. - Flaticon</a>
+- Icon: <a href="https://www.flaticon.com/free-icons/registration" title="registration icons" target="_blank">Registration icons created by Paul J. - Flaticon</a>
