--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -33,4 +33,4 @@ tags: [Astro, Personal, Website, Ongoing]
 - IDE: [VS Code](https://code.visualstudio.com/)
 </details>
 
-If you have any feedback for the website, please [contact me](https://gnoxnahte.com/contact)
+If you have any feedback for the website, please [contact me](https://gnoxnahte.com/about#contact)
