Update packages, fix spelling mistakes
Mainly astro from 2.1.5 to 2.5.0
For spelling mistakes, used: https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker

--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -5,7 +5,7 @@ startDate: 2023-01-30 # format is YYYY-MM-DD
 # releaseDate:  # format is YYYY-MM-DD
 projectLink: https://gnoxnahte.com/ # default is null, put link if possible
 githubLink: https://github.com/GnoxNahte/portfolio # default is null, put link if possible
-thumbnailPath: "../PorfolioWebsite/PortfolioThumbnail.png"
+thumbnailPath: "../PortfolioWebsite/PortfolioThumbnail.png"
 tags: [Astro, Personal, Website, Ongoing] 
 
 ---
@@ -17,14 +17,19 @@ tags: [Astro, Personal, Website, Ongoing]
 - Better performance (Compared to website builders)
 - My [previous website](https://ethanong-jh.wixsite.com/portfolio) for reference (Using Wix)
 
-## Why I chose [Astro](https://astro.build/):
-- Easy to start, for a beginner in web developement
+## Why I chose [Astro](https://astro.build/)
+- Easy to start, for a beginner in web development
 - Has great markdown features, making it easy to create new project pages and update the site. Like a blog
-- Fast and responsive with its islands architechture 
+- Fast and responsive with its islands architecture 
 - Free
 - Open source 
 - Active community 
 - Frequent updates
+
+## Things to improve
+- UI Design
+    - I'm mainly a programmer with very less knowledge on website UI design.
+    - Please give feedback on how to improve the website. It would be much appreciated. 
 
 <details>
 <summary><h3>Tools Used:</h3></summary>
