--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -9,14 +9,27 @@ tags: [Unity, GameJam, Windows, Completed]
 
 ---
 
-## Features that I did:
+This game was for [Brackeys Game Jam 2022.2](https://itch.io/jam/brackeys-8)
+
+## Main Features that I did:
 - Highly Customisable Character Movement script:
     - I did the behaviours and the designer and artist changed the parameters like the speed / jump height
     - The greyed out elements calculated based on the other variables.
     - Editor:
     ![Character Movement Editor](../SentientBuffet/SentientBuffet_MovementEditor.png)
-- [Dialogue System](https://github.com/GnoxNahte/DialogueSystem):
+- Dialogue System:
     - Designer gave the character dialogue script in a design document and I implemented it. 
-    - Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future.
+    - Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future. [GitHub Link](https://github.com/GnoxNahte/DialogueSystem)
+- Inventory and Cooking
+    - Cooking UI: ![Cooking UI](../SentientBuffet/SentientBuffet_Cooking.png)
+
+## Problems faced and how I faced it
+- Programmer delaying on doing Player Movement
+    - One of the programmers was supposed to do some features including shaders and player movement. But by the 4th day, in a 7 day jam, he still haven't started on the player movement which was quite worrying
+    - So I had to takeover and I would do the player movement as it was delaying other features like level building. But it caused me needing to cut some features for the dialogue system.
+    - Having played some games and really disliking the movement, I wanted it to have at least some features like Coyote Time (Allowing players to jump a few seconds after leaving a platform) and Jump Buffers (Allowing players to press the queue the jump a few seconds before touching the ground). 
+- Some problems that I caused and things to improve next time:
+    - Not having a good microphone and ended in typing most of the time, causing delaying time when in conversations, especially when everyone else in the group is in a call.
+    - Overestimated my ability and gave a bad estimate on how fast a feature would be completed. Ended up in cutting features and didn't have enough time to remove all bugs.
 
 {/* TODO Add the correct link to the portfolio website */}
