--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -10,31 +10,46 @@ tags: [Astro, Personal, Website, Ongoing]
 
 ---
 
+## Introduction
+This is a basic portfolio website made for fun and experimenting. It's my first website that I built from scratch and publishing to the web so please give me any feedback that you have.
+
 ## Why I chose to build a website from scratch
 - Learn HTML, CSS, JavaScript / TypeScript
 - More flexibility and control
 - Search functionality, making it easier for potential clients / employers to find projects related to the work they are doing
-- Better performance (Compared to website builders)
+- Better performance (Especially when compared to website builders)
 - My [previous website](https://ethanong-jh.wixsite.com/portfolio) for reference (Using Wix)
 
 ## Why I chose [Astro](https://astro.build/)
 - Easy to start, for a beginner in web development
 - Has great markdown features, making it easy to create new project pages and update the site. Like a blog
-- Fast and responsive with its islands architecture 
+- Fast and responsive with its islands architecture and server-side rendering 
+- Pre-renders most of the JavaScript on the server, making it easy to build and fast when clients view it. 
 - Free
 - Open source 
 - Active community 
 - Frequent updates
+- If you want to read more about it: [Astro Docs: Why Astro](https://docs.astro.build/en/concepts/why-astro/)
 
 ## Things to improve
-- UI Design
+- UI & UX
     - I'm mainly a programmer with very less knowledge on website UI design.
     - Please give feedback on how to improve the website. It would be much appreciated. 
+    - Some general UI & UX improvements todo:
+        - Animations - Most interaction just snap to their final transform without any animations, causing a lot of [Cumulative Layout Shift](https://web.dev/cls/) and doesn't look very good.
+        - Colors - Using some general dark mode colors for now, could definitely be improved and give the website more life. Also can make the website clearer.
+        - Accessibility - Labeling buttons, link / anchor tags, etc for accessibility.
+        - Readability - Some parts are lengthy, hard to read. I've tried to my best to divide it into short bullet points but it can definitely be improved further. 
+- SEO
+    - Adding tags for sharing on different social media websites.
+- Performance
+    - Though Astro is very fast, there are still things that can can be improved
+- For a full list on all things that are I'm working on: [Trello](https://trello.com/b/J4MEDHIA/portfolio-website)
 
 <details>
 <summary><h3>Tools Used:</h3></summary>
-- Framework[Astro](https://astro.build/)
-- Hosting: GitHub Pages
+- Framework: [Astro](https://astro.build/)
+- Hosting: [GitHub Pages](https://pages.github.com/)
 - IDE: [VS Code](https://code.visualstudio.com/)
 </details>
 
