Update all Images to use Astro's new Image feature
https://docs.astro.build/en/guides/images/

--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -5,7 +5,7 @@ startDate: 2023-02-11 # format is YYYY-MM-DD
 releaseDate: 2023-04-12 # format is YYYY-MM-DD
 projectLink: https://gnoxnahte-event-registration.netlify.app # default is null, put link if possible
 # githubLink:  # default is null, put link if possible
-thumbnailPath: "../EventRegistration/EventRegistration_Icon.png"
+thumbnailPath: "../../images/EventRegistration/EventRegistration_Icon.png"
 tags: [SvelteKit, Client, Website, Dropped]
 
 ---
@@ -45,7 +45,7 @@ tags: [SvelteKit, Client, Website, Dropped]
     - End time earlier than start time
     - (Database) Duplicate events
 
-![Create Event page](../EventRegistration/EventRegistration_CreateEvent.png)
+![Create Event page](../../images/EventRegistration/EventRegistration_CreateEvent.png)
 <center>Create Event Page</center>
 
 </details>
@@ -58,12 +58,12 @@ tags: [SvelteKit, Client, Website, Dropped]
     - Note: It should send an email to your email address as long as the services are still working (I haven't been maintaining it as I've dropped the project)
     - Has simple validation like checking if all fields have been filled up or the email was already used
 
-![Register Form](../EventRegistration/EventRegistration_RegisterForm.png)
+![Register Form](../../images/EventRegistration/EventRegistration_RegisterForm.png)
 <center>Register Form</center>
 
 - After submitting the form, the user should get a QR Code with the event information. (Planned to send a reminder email a few days before the event but didn't do it since project was dropped)
 
-![Email With QR Code](../EventRegistration/EventRegistration_Email.png)
+![Email With QR Code](../../images/EventRegistration/EventRegistration_Email.png)
 <center>Email With QR Code</center>
 </details>
 
@@ -75,10 +75,10 @@ tags: [SvelteKit, Client, Website, Dropped]
 - Shows different background depending on the person. E.g. If VIP, show blue
 - Uses [Html5-QRCode](https://www.npmjs.com/package/html5-qrcode) to scan the QR Codes
 
-![Staff Dashboard to see who checked in](../../../public/EventRegistration/EventRegistration_ScanQRCode.gif)
+![Staff Dashboard to see who checked in](../../images/EventRegistration/EventRegistration_ScanQRCode.gif)
 <center>Quick scanning of QR Code</center>
 
-![Staff Dashboard to see who checked in](../EventRegistration/EventRegistration_EventDashboard.png)
+![Staff Dashboard to see who checked in](../../images/EventRegistration/EventRegistration_EventDashboard.png)
 <center>Staff Dashboard to see who checked in</center>
 
 </details>
@@ -89,7 +89,7 @@ tags: [SvelteKit, Client, Website, Dropped]
 <summary>Export and import user information</summary>
 - Export and import to Excel using [XLSX](https://www.npmjs.com/package/xlsx)
 
-![Excel export](../EventRegistration/EventRegistration_ExcelExport.png)
+![Excel export](../../images/EventRegistration/EventRegistration_ExcelExport.png)
 <center>Export to Excel</center>
 
 </details>
@@ -108,10 +108,10 @@ tags: [SvelteKit, Client, Website, Dropped]
     - Many users participating in the event
         - Each user has their own metadata (User name, email, etc...)
 
-![Firebase Console for events](../EventRegistration/EventRegistration_FirebaseConsole_Events.png)
+![Firebase Console for events](../../images/EventRegistration/EventRegistration_FirebaseConsole_Events.png)
 <center>Firebase Console for events</center>
 
-![Firebase Console for users](../EventRegistration/EventRegistration_FirebaseConsole_Users.png)
+![Firebase Console for users](../../images/EventRegistration/EventRegistration_FirebaseConsole_Users.png)
 <center>Firebase Console for users</center>
 
 </details>
