--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -4,7 +4,7 @@ shortDescription: As a world renown chef, you can sometimes find yourself wander
 releaseDate: 2022-08-28 # format is YYYY-MM-DD
 projectLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
 githubLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
-thumbnailPath: "../SentientBuffet/SentientBuffetThumbnail.png"
+thumbnailPath: "../../images/SentientBuffet/SentientBuffetThumbnail.png"
 tags: [Unity, GameJam, Windows, Completed]
 
 ---
@@ -16,12 +16,12 @@ This game was for [Brackeys Game Jam 2022.2](https://itch.io/jam/brackeys-8)
     - I did the behaviours and the designer and artist changed the parameters like the speed / jump height
     - The greyed out elements calculated based on the other variables.
     - Editor:
-    ![Character Movement Editor](../SentientBuffet/SentientBuffet_MovementEditor.png)
+    ![Character Movement Editor](../../images/SentientBuffet/SentientBuffet_MovementEditor.png)
 - Dialogue System:
     - Designer gave the character dialogue script in a design document and I implemented it. 
     - Note: Trying to convert the editor UI to UI toolkit to learn UI Toolkit and make it reusable in the future. [GitHub Link](https://github.com/GnoxNahte/DialogueSystem)
 - Inventory and Cooking
-    - Cooking UI: ![Cooking UI](../SentientBuffet/SentientBuffet_Cooking.png)
+    - Cooking UI: ![Cooking UI](../../images/SentientBuffet/SentientBuffet_Cooking.png)
 
 ## Problems faced and how I faced it
 - Programmer delaying on doing Player Movement
