--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -3,7 +3,7 @@ title: Spellbound Rollers
 shortDescription: "A simple survival game where you have to defend yourself against living dice with your own through utilizing several special powers: Fire, poison, ice etc... Collect the chips, gain XP and unlock more powers!"
 releaseDate: 2022-07-17
 projectLink: "https://team-auboreal.itch.io/sentient-buffet"
-thumbnailPath: "../SpellboundRollers/SpellboundRollers.png"
+thumbnailPath: "../../images/SpellboundRollers/SpellboundRollers.png"
 tags: [Unity, GameJam, Completed]
 ---
 
