Change some of the layout for small screens
For small screens:
- Add back filter button
- Filter panel is on top of the project result panel
- Add filter icons, from flaticon (https://www.flaticon.com/free-icons/filter)

--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -47,10 +47,15 @@ This is a basic portfolio website made for fun and experimenting. It's my first 
 - For a full list on all things that are I'm working on: [Trello](https://trello.com/b/J4MEDHIA/portfolio-website)
 
 <details>
-<summary><h3>Tools Used:</h3></summary>
-- Framework: [Astro](https://astro.build/)
-- Hosting: [GitHub Pages](https://pages.github.com/)
-- IDE: [VS Code](https://code.visualstudio.com/)
+    <summary><h3>Tools Used:</h3></summary>
+    - Framework: [Astro](https://astro.build/)
+    - Hosting: [GitHub Pages](https://pages.github.com/)
+    - IDE: [VS Code](https://code.visualstudio.com/)
 </details>
 
-If you have any feedback for the website, please [contact me](https://gnoxnahte.com/about#contact)
+<details>
+    <summary><h3>Icons / Images Used:</h3></summary>
+    - <a href="https://www.flaticon.com/free-icons/filter" title="filter icons">Filter icons created by Saepul Nahwan - Flaticon</a>
+</details>
+
+If you have any feedback for the website, please [contact me](/about#contact)
