Minor changes to project mdx

--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -30,6 +30,10 @@ This is a basic portfolio website made for fun and experimenting. It's my first 
 - Active community 
 - Frequent updates
 - If you want to read more about it: [Astro Docs: Why Astro](https://docs.astro.build/en/concepts/why-astro/)
+- Some proof for performance:
+  ![Page Web Vitals (Lighthouse) - Projects Page](../../images/PortfolioWebsite/Portfolio_ProjectPage_LighthouseResult.png)
+<center>Page Web Vitals</center>
+
 
 ## Things to improve
 - UI & UX
