--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -26,10 +26,10 @@ This game was for [Brackeys Game Jam 2022.2](https://itch.io/jam/brackeys-8)
 ## Problems faced and how I faced it
 - Programmer delaying on doing Player Movement
     - One of the programmers was supposed to do some features including shaders and player movement. But by the 4th day, in a 7 day jam, he still haven't started on the player movement which was quite worrying
-    - So I had to takeover and I would do the player movement as it was delaying other features like level building. But it caused me needing to cut some features for the dialogue system.
+    - So after discussing with the team, we decided that I had to takeover the player movement as it was delaying other features like level design. But it caused me needing to cut some features for the dialogue system.
     - Having played some games and really disliking the movement, I wanted it to have at least some features like Coyote Time (Allowing players to jump a few seconds after leaving a platform) and Jump Buffers (Allowing players to press the queue the jump a few seconds before touching the ground). 
 - Some problems that I caused and things to improve next time:
     - Not having a good microphone and ended in typing most of the time, causing delaying time when in conversations, especially when everyone else in the group is in a call.
-    - Overestimated my ability and gave a bad estimate on how fast a feature would be completed. Ended up in cutting features and didn't have enough time to remove all bugs.
+    - Overestimated my ability and gave a bad estimate on how fast a feature would be completed. Ended up in cutting features and didn't have enough time to remove most of the bugs.
 
 {/* TODO Add the correct link to the portfolio website */}
