Minor Changes for tags
- Disable text selection for tags
- Add Windows tag to spellbound-rollers
- Remove Unreal and WebGL tags since there's no projects for it yet

--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -4,7 +4,7 @@ shortDescription: "A simple survival game where you have to defend yourself agai
 releaseDate: 2022-07-17
 projectLink: "https://team-auboreal.itch.io/sentient-buffet"
 thumbnailPath: "../../images/SpellboundRollers/SpellboundRollers.png"
-tags: [Unity, GameJam, Completed]
+tags: [Unity, GameJam, Windows, Completed]
 ---
 
 Features that I did:
