Add Date to project cards and modify date on project pages.
Now shows something like:
21 August 2022 - 28 August 2022
or
30 January 2023 - Ongoing

Adds the duration for project pages and if isn't Ongoing

--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -1,9 +1,9 @@
 ---
 title: Sentient Buffet
 shortDescription: As a world renown chef, you can sometimes find yourself wandering the forest in search of ingredients. However, one day, in a route where you would normally be alone, you find yourself swarmed by living food that begin to attack you. Fight them off, and then cook them for stat buffs to help you venture further into the forest.
+startDate: 2022-08-21 # format is YYYY-MM-DD
 releaseDate: 2022-08-28 # format is YYYY-MM-DD
 projectLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
-githubLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
 thumbnailPath: "../../images/SentientBuffet/SentientBuffetThumbnail.png"
 tags: [Unity, GameJam, Windows, Completed]
 
