--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -1,7 +1,8 @@
 ---
 title: Spellbound Rollers
 shortDescription: "A simple survival game where you have to defend yourself against living dice with your own through utilizing several special powers: Fire, poison, ice etc... Collect the chips, gain XP and unlock more powers!"
-releaseDate: 2022-07-17
+startDate: 2022-07-16
+releaseDate: 2022-07-18
 projectLink: "https://ategon.itch.io/spellbound-rollers"
 thumbnailPath: "../../images/SpellboundRollers/SpellboundRollers.png"
 tags: [Unity, GameJam, Windows, Completed]
