--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -1,6 +1,6 @@
 ---
 title: Portfolio Website
-shortDescription: Personal portfolio website built using Astro build (This Website)
+shortDescription: Personal portfolio website built using Astro (This Website)
 startDate: 2023-01-30 # format is YYYY-MM-DD
 # releaseDate:  # format is YYYY-MM-DD
 projectLink: https://gnoxnahte.com/ # default is null, put link if possible
