Add _Template, Obsidian Auto Embed, new portfolio website,

--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -11,7 +11,9 @@ tags: [Astro, Personal, Website, Ongoing]
 ---
 
 ## Introduction
-This is a basic portfolio website made for fun and experimenting. It's my first website that I built from scratch and publishing to the web so please give me any feedback that you have.
+This is a basic portfolio website made for fun and experimenting. It's my first website that I built from scratch and publishing to the web so please give me any feedback that you have. 
+
+I'm also slowly rebuilding the website - https://gnoxnahte.dev. The main reasons are because since this is my first serious websites, some code isn't easily maintainable to add new features and fix bugs. I also don't really the bland colors and would like to change the styles. Hoping to separate "web dev" and "game dev" too.
 
 ## Why I chose to build a website from scratch
 - Learn HTML, CSS, JavaScript / TypeScript
