Modify table of content to put it as a sidebar. Still modifying css. Changing computers

--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -25,7 +25,7 @@ tags: [SvelteKit, Client, Website, Dropped]
     - Wasn't employed, given any money or signed any contract. Feedback was mostly from my father and not staff from the company.
     - Project was dropped in the end because the company's higher-ups wasn't comfortable with a third party handling the database, needing lots of approval
 
-## Overview on how the users and staff will use the app
+## Overview on user workflow
 1. Staff creates a new event
 2. Staff sends register event link to users
 3. Users register event through link
