Modify Table of Contents, mobile layout for [slug] pages and various changes to content in different pages.

--- a/src/content/projects/obsidian-auto-embed.mdx
+++ b/src/content/projects/obsidian-auto-embed.mdx
@@ -30,7 +30,7 @@ While exploring the app, found that they support embedding websites but it's onl
 So I decided to build the plugin.
 
 ## My Progress building the plugin
-### Checking if there's a existing plugin that already does this.
+### Checking if there is an existing plugin
 Tried to search the web and didn't find anything that does it. 
 <details>
 <summary>Similar projects:</summary>
@@ -69,7 +69,7 @@ This doesn't really solve it when the embeds are close together but at least it 
 ### Implementing Live Preview
 All the work done above only works on Reading Mode and not Live Preview - [Documentation](https://help.obsidian.md/Editing+and+formatting/Edit+and+preview+Markdown). Basically, Reading Mode shows the fully rendered HTML and the user can't edit while Live Preview shows the HTML but the user can edit. 
 
-Obsidian uses a different system, [Editor Extensions](https://docs.obsidian.md/Plugins/Editor/Editor+extensions), for Live Preview. It uses [https://docs.obsidian.md/Plugins/Editor/Editor+extensions](CodeMirror) as a base. This results in the information I'm required to understand to greatly increase as I needed to learn CodeMirror too. Personally, I Obsidian's documentation on Editor Extensions is very little and the community devs using Editor Extensions is small. But I would eventually implement it through a lot of searching and asking the Discord.
+Obsidian uses a different system, [Editor Extensions](https://docs.obsidian.md/Plugins/Editor/Editor+extensions), for Live Preview. It uses [CodeMirror](https://docs.obsidian.md/Plugins/Editor/Editor+extensions) as a base. This results in the information I'm required to understand to greatly increase as I needed to learn CodeMirror too. Personally, I Obsidian's documentation on Editor Extensions is very little and the community devs using Editor Extensions is small. But I would eventually implement it through a lot of searching and asking the Discord.
 
-### Submitting to Obsidian's plugin directory
+### Submitting to Obsidian plugin directory
 Not much to say but I got accepted! Here's the link: https://obsidian.md/plugins?id=auto-embed
