--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -8,13 +8,13 @@ thumbnailPath: "../../images/SpellboundRollers/SpellboundRollers.png"
 tags: [Unity, GameJam, Windows, Completed]
 ---
 
-## Game Overview:
+## Game Overview
 - Main gameplay: Enemies spawn around the player, and the player has to defeat them using their attacks and abilities. 
 - Unique Selling Point: The player shoots out dices (following the game jam theme), and depending on what side of the dice is facing up, the player will activate the ability on that face.
 - Inspired by [Vampire Survivors](https://store.steampowered.com/app/1794680/Vampire_Survivors/).
 - This game was for [GMTK Game Jam 2022](https://itch.io/jam/gmtk-jam-2022), theme is "Roll of the Dice".
 
-## Main Features that I did:
+## Main Features that I did
 - Attacks 
     - Basic Attack - The player shoots dice, and depending on which face of the dice is up, the dice spawns an ability that attacks / gives a status effect to the enemies.
     - Abilities: 
